# VCISFOB3

./: Dockerfile  app.py  pyproject.toml  requirements.txt  streamlit_app.py  valuechain.db
attached_assets/: Pasted-SYSTEM-ROLE-You-are-an-ultra-intelligent-AI-ML-Software-Architect-Full-Stack-Engineer-IQ-798-s-1761274847404_1761274847405.txt
image/: 2.avif
image/thumbs/: 2.avif
scripts/: make_thumbs.py
services/: commodities.py
